<?xml version="1.0"?>
<package format="2">
  <name>{{rqt_gui_template}}</name>
  <version>0.0.1</version>
  <description>{{description}}</description>

  <maintainer email="{{author_mail}}">{{author_name}}</maintainer>

  <license>{{license}}</license>

  <author email="{{author_mail}}">{{author_name}}</author> 

  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/> 
  </export>

</package>

